--- a/style.css
+++ b/style.css
@@ -2,3 +2,225 @@
     margin: 0 auto;
     padding: 0;
 }
+
+/*Banner 1 CSS*/
+.banner-1 {
+    background: linear-gradient(180.00deg, rgb(0, 0, 0),rgba(110, 110, 110, 0) 100%), linear-gradient(0.00deg, rgb(0, 0, 0),rgba(110, 110, 110, 0) 100%);
+    height: 720px;
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+header {
+    padding-top: 60px;
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header h1 {
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 36px;
+    font-weight: 800;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.hamburger-menu {
+    display: none;
+}
+
+.header-navbar {
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 39px;
+    padding-right: 20px;
+}
+
+.header-navbar ul {
+    display: flex;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
+.header-navbar ul li {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.home {
+    height: 100%;
+    border-radius: 46px;
+    background: rgb(230, 83, 60);
+    padding: 10px 20px;
+}
+
+.banner-1-layer-1 {
+    margin-top: 32px;
+    float: right;
+    width: 90%;
+    height: 580px;
+    display: flex;
+}
+
+.banner-1-textbox {
+    width: 520px;
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.banner-1-textbox h1 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 78px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 28px;
+}
+
+.italics {
+    font-family: Sail;
+    font-weight: 400px;
+}
+
+.banner-1-layer-1 p, span {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    text-align: left;
+    margin-bottom: 28px;
+}
+
+.banner-1-textbox button {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: center;
+    width: 224px;
+    height: 54px;
+}
+
+.banner-1-textbox .button-left {
+    border-width: 0;
+    border-radius: 42px;
+    background: rgb(230, 83, 60);
+}
+
+.banner-1-textbox .button-right {
+    background: rgb(0, 0, 0, 0);
+    margin-left: 20px;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+    border-radius: 42px;
+}
+
+.banner-1-imgbox {
+    display: flex;
+    width: 50%;
+}
+
+.banner-1-imgbox img {
+    position: relative;
+    z-index: 1;
+}
+
+.banner-1-layer-2 {
+    position: absolute;
+    z-index: 2;
+    display: flex;
+}
+
+.banner-1-layer-2 p {
+    color: rgba(239, 237, 232, 0.65);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    text-align: center;
+    margin-top: 20px;
+}
+
+.vid-tutorial-box {
+    margin-top: 385px;
+    margin-left: 80px;
+    padding: 20px;
+    display: flex;
+    width: 206px;
+    height: 96px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(48, 48, 48, 0.54);
+}
+
+.vid-tutorial-box h3 {
+    width: 200px;
+    margin-left: 10px;
+    color: rgb(250, 250, 249);
+    font-family: Inter;
+    font-size: 24px;
+    font-weight: 900;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
+
+.vid-tutorial-box li {
+    margin-top: 5px;
+    background: rgb(230, 83, 60);
+    list-style: none;
+    width: 55px;
+    height: 40px;
+    border-radius: 50%;
+}
+
+.free-vid-box {
+    margin-top: 120px;
+    margin-left: 100px;
+    padding: 20px;
+    align-items: center;
+    display: flex;
+    width: 195px;
+    height: 100px;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 12px;
+    backdrop-filter: blur(20px);
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.free-vid-box h2 {
+    color: rgb(255, 255, 255);
+    margin-right: 10px;
+    font-family: Inter;
+    font-size: 40px;
+    font-weight: 900;
+    line-height: 40px;
+    letter-spacing: 1px;
+    text-align: center;
+}
