--- a/style.css
+++ b/style.css
@@ -224,3 +224,78 @@ header h1 {
     letter-spacing: 1px;
     text-align: center;
 }
+
+/*Banner 2 CSS*/
+.banner-2 {
+    width: 100%;
+    background: rgb(0, 0, 0, 1.0);
+    padding-top: 100px;
+    align-items: center;
+}
+
+.change-habits {
+    width: 90%;
+    display: block;
+}
+
+.change-habits h1 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 14px;
+}
+
+.change-habits p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+.habitbox {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 100px;
+}
+
+.habit-container {
+    width: 230px;
+    display: block;
+}
+
+.habit-container img {
+    width: 100%;
+    height: 180px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+}
+
+.habit-container h4 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 6px;
+}
+
+.habit-container p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
