--- a/style.css
+++ b/style.css
@@ -369,3 +369,155 @@ header h1 {
     border-radius: 18px;
 }
 
+/*Banner 4 CSS*/
+.banner-4 {
+    width: 100%;
+    display: block;
+    background: black;
+}
+
+.banner-4-text {
+    width: 60%;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-4-text h5 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.banner-4-text p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+    padding-bottom: 90px;
+}
+
+.bmi-box {
+    width: 100%;
+    height: 487px;
+    background: rgb(34, 34, 34);
+    display: flex;
+    justify-content: space-between;
+}
+
+.bmi-box-left {
+    width: 443px;
+    margin-left: 190px;
+    margin-top: 52px;
+}
+
+.bmi-box-left h6 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 52px;
+}
+
+.bmi-box-left table {
+    width: 310px;
+    height: 216px;
+    margin-left: 0;
+}
+
+.bmi-box-left table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse;
+}
+
+.bmi-box-left th {
+    padding-left: 5px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.bmi-box-left tr {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.bmi-box-right {
+    width: 600px;
+    margin-right: 190px;
+    margin-top: 52px;
+}
+
+.bmi-box-right h6 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 28px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 15px;
+}
+
+.bmi-box-right p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+    margin-bottom: 34px;
+}
+
+.bmi-box-right input[type="Height"], input[type="Age"], input[type="Sex"], input[type="Weight"], input[type="Activity"] {
+    width: 260px;
+    height: 40px;
+    border-radius: 8px;
+    background: rgba(255, 255, 255, 0.1);
+    color: rgba(255, 255, 255, 0.6);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0px;
+    text-align: left;
+    padding-left: 20px;
+    border-width: 0;
+    margin-right: 10px;
+    margin-bottom: 10px;
+}
+
+.bmi-box-right input[type="Activity"] {
+    width: 557px;
+}
+
+.submit-button{
+    margin-top: 20px;
+    float: left;
+    width: 224px;
+    height: 54px;
+    border-radius: 42px;
+    border-width: 0;
+    background: rgb(230, 83, 60);
+}
+
