--- a/style.css
+++ b/style.css
@@ -521,3 +521,179 @@ header h1 {
     background: rgb(230, 83, 60);
 }
 
+/*Banner 5 CSS*/
+.banner-5 {
+    width: 100%;
+    background: black;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
+
+.banner-5-textbox {
+    width: 50%;
+}
+
+.banner-5-textbox h2 {
+    padding-top: 160px;
+    margin-bottom: 14px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.banner-5-textbox p {
+    padding-bottom: 58px;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
+
+.banner-5-picsbox {
+    width: 70%;
+    height: auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.banner-5-gridbox {
+    padding: 20px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: auto auto auto;
+}
+
+.banner-5-griditem {
+    height: 272px;
+    display: flex;
+}
+
+.banner-5-griditem img {
+    border-radius: 18px;
+    position: relative;
+    z-index: 1;
+    height: 272px;
+    width: 327px;
+}
+
+.banner-5-griditem h6 {
+    position: absolute;
+    z-index: 2;
+    margin-left: 20px;
+    margin-top: 200px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+}
+
+.banner-5-griditem br {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+}
+
+/*Banner 6 CSS*/
+.banner-6 {
+    width: 100%;
+    background: black;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 100px;
+}
+
+.banner-6-textbox {
+    width: 50%;
+}
+
+.banner-6-textbox h2 {
+    padding-top: 160px;
+    margin-bottom: 14px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 48px;
+    font-weight: 900;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: center;
+}
+
+.banner-6-textbox p {
+    padding-bottom: 58px;
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
+
+.banner-6-picsbox {
+    width: 70%;
+    height: auto;
+    border-radius: 18px;
+    background: rgba(255, 255, 255, 0.1);
+}
+
+.banner-6-gridbox {
+    padding: 20px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: auto auto auto;
+}
+
+.banner-6-griditem {
+    height: 272px;
+    display: flex;
+}
+
+.banner-6-griditem img {
+    border-radius: 18px;
+    position: relative;
+    z-index: 1;
+    height: 272px;
+    width: 327px;
+}
+
+.banner-6-griditem h6 {
+    position: absolute;
+    z-index: 2;
+    margin-top: 10px;
+    margin-left: 20px;
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    width: 290px;
+}
+
+.banner-6-griditem span {
+    margin-top: 10px;
+    color: black;
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+}
