--- a/style.css
+++ b/style.css
@@ -697,3 +697,100 @@ header h1 {
     letter-spacing: 0.3px;
     text-align: left;
 }
+
+/*Footer CSS*/
+footer {
+    display: block;
+    width: 100%;
+    background: black;
+}
+
+.footer-box {
+    width: 100%;
+    display: block;
+    background: rgba(255, 255, 255, 0.1);
+    padding-bottom: 40px;
+}
+
+.footer-top {
+    justify-content: space-between;
+    width: 100%;
+    display: flex;
+}
+
+.footer-left {
+    width: 443px;
+}
+
+.footer-left h1 {
+    color: rgb(230, 83, 60);
+    font-family: Inter;
+    font-size: 70px;
+    font-weight: 800;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 65px;
+    margin-bottom: 20px;
+}
+
+.footer-left p {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: left;
+    margin-bottom: 150px;
+}
+
+.footer-box h6 {
+    color: rgb(255, 255, 255);
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-top: 65px;
+}
+
+.footer-box li {
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 23px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-align: left;
+    list-style: none;
+    margin-top: 20px;
+}
+
+.footer-middle {
+
+}
+
+.footer-right {
+
+}
+
+.footer-line {
+    padding-bottom: 35px;
+}
+
+.footer-line hr {
+    width: 80%;
+    margin: 0 auto; /* Center the line */
+}
+
+.footer-bottom-text h3{
+    color: rgba(255, 255, 255, 0.5);
+    font-family: Inter;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    text-align: center;
+}
