--- a/style.css
+++ b/style.css
@@ -794,3 +794,135 @@ footer {
     letter-spacing: 0.3px;
     text-align: center;
 }
+
+/* Responsive for devices <=576px */
+@media screen AND (max-width: 576px){
+
+    html, body {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+    }
+    .header-navbar {
+        display: none;
+    }
+    .hamburger-menu {
+        width: 50px;
+        height: 50px;
+        display: block;
+    }
+    .banner-1-layer-1 {
+        width: 100%;
+        display: block;
+    }
+    .banner-1-textbox {
+        margin-left: 25px;
+        margin: 20px;
+        width: 90%;
+        display: block;
+    }
+    .banner-1-textbox h1 {
+        margin-right: 10px;
+        color: rgb(255, 255, 255);
+        font-family: Inter;
+        font-size: 36px;
+        font-weight: 900;
+        line-height: 120%;
+        letter-spacing: 0%;
+        text-align: left;
+    }
+    .banner-1-buttonbox {
+        margin-right: 20px;
+        display: flex;
+    }
+    .banner-1-textbox button {
+        color: rgb(255, 255, 255);
+        font-family: Inter;
+        font-size: 16px;
+        font-weight: 600;
+        line-height: 22px;
+        letter-spacing: 0px;
+        text-align: center;
+        width: 160px;
+    }
+    .banner-1-imgbox {
+        margin-left: 20px;
+    }
+    .vid-tutorial-box{
+        width: 180px;
+        height: 80px;
+        margin-top: 300px;
+        margin-left: 0;
+    }
+    .vid-tutorial-box h3 {
+        width: auto;
+        font-size: 16px;
+    }
+    .vid-tutorial-box span {
+        font-size: 10px;
+    }
+    .vid-tutorial-box li {
+        width: 40px;
+        height: 40px;
+        margin-top: 0;
+    }
+    .free-vid-box {
+        width: 150px;
+        height: 70px;
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .free-vid-box h2 {
+        margin-left: 10px;
+        font-size: 25px;
+    }
+    .free-vid-box p {
+        margin-right: 10px;
+        font-size: 10px;
+    }
+    .free-vid-box {
+        margin-top: 15px;
+        padding: 0;
+    }
+    .banner-2 {
+        padding-top: 400px;
+    }
+    .change-habits {
+        padding-top: 20px;
+    }
+    .habitbox {
+        display: block;
+        padding-bottom: 30px;
+    }
+    .habit-container {
+        margin-bottom: 50px;
+    }
+    .banner-3 {
+        display: block;
+        height: auto;
+        padding-bottom: 40px;
+    }
+    .banner-3-bg {
+        padding-bottom: 40px;
+    }
+    .banner-3-left, .banner-3-right {
+        width: 100%;
+        margin-left: 10px;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-3-left {
+        padding: 10px;
+    }
+    .banner-3-left p {
+        margin-right: 30px;
+    }
+    .banner-3-left button {
+        width: 310px;
+    }
+    .banner-3-right img {
+        margin-top: 20px;
+        margin-left: 7px;
+        width: 90%;
+    }
+}
